--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(LABA2_2sem C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(LABA2_2sem main.c)
+add_executable(LABA2_2sem main.c
+        function.c
+)
